# samplecode

cmake/: build_helper.cmake  cotire.cmake
cmake/modules/: FindAlembic.cmake  FindGoogleTest.cmake  FindILMBase.cmake  FindOpenBLAS.cmake  FindRBDL.cmake  FindUSD.cmake  FindZelos.cmake
cmake/modules/notUsed/: FindHoudini.cmake  FindRMan.cmake
extra/: eigen_array_base_plugin.h  eigen_array_plugin.h  eigen_matrix_base_plugin.h  eigen_matrix_plugin.h  eigen_quaternion_base_plugin.h  eigen_quaternion_plugin.h  ffmpeg_capture.h  glxFramework.h  inc_alembic.h  inc_boost.h  inc_cuda.h  inc_eigen.h  inc_gl.h  inc_igl.h  inc_maya.h  inc_oiio.h  inc_openmesh.h  inc_prman.h  inc_tbb.h  inc_usd.h  inc_zelos.h
proj/tane/: CMakeLists.txt
proj/tane/src/: CMakeLists.txt
proj/tane/src/lib/: CMakeLists.txt
proj/tane/src/lib/base/: CMakeLists.txt  abcReader.h  array.cpp  array.h  attributes.h  bbox.cpp  bbox.h  box.h  bvh.h  digest.h  fileUtil.h  frame.cpp  frame.h  frameInterval.h  hackedQueue.h  hasher.h  instancingItem.h  intersectionQueryEngine.h  logger.h  mapUtil.h  mathUtil.h  matrix.h  matrixStack.h  messageQueue.h  nearestNeighborQueryEngine.h  operator.h  pch.cpp  pch.h  plane.h  points.cpp  points.h  quat.h  query.h  random.h  ray.h  renderItem.h  size.h  staticData.h  surface.h  texture.h  (+8 more)
proj/tane/src/lib/base/unitTest/: unitTest.cpp
proj/tane/src/lib/baseGl/: CMakeLists.txt  glBuffer.cpp  glBuffer.h  glShader.h  glutil.h  instancingTask.h  pch.cpp  pch.h  query.h  renderTask.cpp  renderTask.h  taskManager.h
proj/tane/src/lib/baseGl/resource/shader/: icr.gs  icr.vs  icrPhong.fs  icrPhong.vs  icrPhong2.fs  icrPhong2.gs  icrPhong2.vs  test.fs  test.vs  xfd.gs  xfd.vs
proj/tane/src/lib/baseGl/unitTest/: unitTest.cpp
proj/tane/src/lib/baseMaya/: CMakeLists.txt  mayaMeshExtractor.h  pch.cpp  pch.h  pluginRegister.h  polyTriangulator.h  triangleMeshUtil.h  usdUtil.h  usdVariantSelect.h  util.h  zelosUtil.h
proj/tane/src/lib/baseMaya/unitTest/: unitTest.cpp
proj/tane/src/lib/baseUsd/: CMakeLists.txt  pch.cpp  pch.h  usdExporter.h  usdImporter.h
proj/tane/src/lib/baseUsd/unitTest/: unitTest.cpp
proj/tane/src/tane/: CMakeLists.txt  pch.cpp  pch.h  pipelineUtil.h
proj/tane/src/tane/plugin/: CMakeLists.txt
proj/tane/src/tane/plugin/maya/: CMakeLists.txt  abc2ProxyMPxShape.cpp  abc2ProxyMPxShape.h  abcProxyMPxShape.cpp  abcProxyMPxShape.h  batchRenderer.cpp  batchRenderer.h  bindMPxNode.cpp  bindMPxNode.h  clearRenderableTweakCmd.h  clearTransformTweakCmd.h  connectionInfoCmd.h  createEnvironmentNetworkCmd.h  createNodeCmd.h  createUtil.h  drawOverride.cpp  drawOverride.h  environmentMPxNode.cpp  environmentMPxNode.h  exportCmd.h  fetchAttributeMPxNode.cpp  fetchAttributeMPxNode.h  getPointCmd.h  getSourceCmd.h  importCmd.h  messageMPxData.cpp  messageMPxData.h  pch.cpp  pch.h  pluginMain.cpp  pointsMPxData.cpp  pointsMPxData.h  proxyMPxShape.cpp  proxyMPxShape.h  proxyMPxShapeDrawOverride.h  setPointCmd.h  setSourceCmd.h  sourceMPxData.cpp  sourceMPxData.h  sourcesInfoCmd.h  (+12 more)
proj/tane/src/tane/plugin/maya/resource/script/: DagMenuProcs.mel  OptionsWnd.py  TaneInit.mel  TaneUtil.mel  TaneUtil.py  test.py
proj/tane/src/tane/plugin/maya/resource/script/AETemplates/: AETN_Abc2ProxyTemplate.mel  AETN_AbcProxyTemplate.mel  AETN_BindTemplate.mel  AETN_BindTemplate.py  AETN_EnvironmentTemplate.mel  AETN_EnvironmentTemplate.py  AETN_FetchAttributeTemplate.mel  AETN_TaneTemplate.mel  AETN_UsdHdProxyTemplate.mel  AETN_UsdHdProxyTemplate.py  AETN_UsdProxyTemplate.mel  AETN_UsdProxyTemplate.py  AETemplateHelper.py  undo.py
proj/tane/src/tane/plugin/rman/: CMakeLists.txt
proj/tane/src/tane/plugin/rman/unitTest/: unitTest.cpp
