#-------------------------------------------------------------------- add_subdirectories
add_subdirectory(lib)

#------------------------------------------- tane
add_subdirectory(tane)
    #libtane.a
    #libTaneForMaya.so
    #libAlembicRiProcedural2.so
    #libTaneRiProcedural.so
    #libUsdRiProcedural.so

#------------------------------------------- usdProxy
#add_subdirectory(usdProxy)
    #usdProxy.so

#------------------------------------------- darkRide

#------------------------------------------- ...

