#------------------------------------------- base
add_subdirectory(base)
    #base.a

#------------------------------------------- baseGl
add_subdirectory(baseGl)
    #baseGl.a

#------------------------------------------- baseUsd
add_subdirectory(baseUsd)
    #baseUsd.a

#------------------------------------------- baseMaya
add_subdirectory(baseMaya)
    #baseMaya.a


